package TEMA6.Empleados_Ysus_Tareas;

public class Desarollador extends Empleados{

    @Override
    public void realizarTarea(){
        System.out.println("Escribiendo codigo y solucionando bugs");
    }
}
