package TEMA6.Empleados_Ysus_Tareas;

public class Empleados {

    public void realizarTarea(){
        System.out.println("Empleado realizando tarea genetica");
    }

}
