package TEMA6.Empleados_Ysus_Tareas;

public class Gerente extends Empleados{

    public void realizarTarea(){
        System.out.println("Supervisando el proyecto y organizando reuniones.");
    }
}
